# graphviz

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog  DEVELOPERS.md  Makefile.am  README.md  appveyor.yml  autogen.sh  configure.ac  distro_notes.txt  graphviz-centos.repo  graphviz-fedora.repo  oss_projects.yml
ci/: build.sh  generate-configuration-table.py  test.sh
ci/centos6/: Dockerfile
ci/centos7/: Dockerfile
ci/centos8/: Dockerfile
ci/fedora29/: Dockerfile
ci/fedora30/: Dockerfile
ci/fedora31/: Dockerfile
ci/fedora32/: Dockerfile
ci/fedora33/: Dockerfile
ci/ubuntu-18.04/: Dockerfile
ci/ubuntu-19.04/: Dockerfile
ci/ubuntu-19.10/: Dockerfile
ci/ubuntu-20.04/: Dockerfile
cmake/: config_checks.cmake  package_info.cmake
cmd/dot/: Makefile.am  dot.1  dot.vcxproj  osage.1  patchwork.1
cmd/dotty/: Makefile.am  dotty.vcxproj
cmd/edgepaint/: Makefile.am  edgepaint.vcxproj  edgepaintmain.c
cmd/gvedit/: Makefile.am
cmd/gvmap/: Makefile.am  cluster.c  gvmap.c  (+2 more)
debian/: rules
doc/: build.html  todo.html  winbuild.html
dot.demo/: dot_demo.vcproj
lib/: gvc.def  gvc.vcxproj
lib/vmalloc/: CMakeLists.txt  Makefile.am  test.c  vmalloc.h  vmalloc.vcxproj  vmalloc.vcxproj.filters  vmbest.c  vmclear.c  vmclose.c  vmhdr.h  vmopen.c  vmstrdup.c  vmtrace.c
macosx/: GVAttributeInspectorController.m  GVDocument.m  GVExportViewController.m  GVGraph.m  GVWindowController.m
redhat/: graphviz.spec.fedora.in
rtest/: Makefile.am  rtest.sh  test_examples.py  test_regression.py  test_vmalloc.py  tests.txt
rtest2/: Makefile
(+295 files in other folders)
