# $Id$ $Revision$
## Process this file with automake to produce Makefile.in

noinst_HEADERS = vmalloc.h vmhdr.h
noinst_LTLIBRARIES = libvmalloc_C.la

libvmalloc_C_la_SOURCES = vmbest.c vmclear.c vmclose.c vmdcheap.c \
	vmopen.c vmprivate.c \
	vmstat.c vmstrdup.c \
	vmwalk.c

EXTRA_DIST = README vmalloc.vcxproj*
